docs: store user SP500 monthly add-on investment rules

--- a/memory/2026-02-24.md
+++ b/memory/2026-02-24.md
@@ -162,3 +162,10 @@
 - 用户已确认收到两份文件（500榜单 xls + 对比 docx）。
 - 用户要求将该能力作为长期流程保留，并表示后续“每日都会安排一次”。
 - 明确邮箱策略：收发统一 `700008@qq.com`。
+
+## 投资规则新增（用户指定）
+- 标普500当月增持机制：
+  1) 单日跌幅达到 -1%：执行当月定额增持。
+  2) 若当月未触发(1)：第三个星期五收盘前执行当月定额增持。
+  3) 在(1)或(2)已执行基础上，若当月跌幅达到 -5%：再加一笔定额增持。
+  4) 触发并执行(3)后，当月不再增持。
