docs: append evening memory on openwrt automation and moomoo setup progress

--- a/memory/2026-02-24.md
+++ b/memory/2026-02-24.md
@@ -169,3 +169,24 @@
   2) 若当月未触发(1)：第三个星期五收盘前执行当月定额增持。
   3) 在(1)或(2)已执行基础上，若当月跌幅达到 -5%：再加一笔定额增持。
   4) 触发并执行(3)后，当月不再增持。
+
+## OpenWrt 运维与自动化（晚间新增）
+- 用户家中路由设备可通过 SSH 登录（OpenWrt，主机 `192.168.2.2`），并要求后续协助运维。
+- SSR Plus 已新增订阅并更新成功：`https://iplcsub.com/subscribe/36406/0kOSkhglOL/ssr/`。
+- 已确认 OpenWrt 侧可访问 Google（DNS 与 HTTP/HTTPS 测试均通过）。
+- 已配置/调整定时任务：
+  - 每天 02:00 检测 Google；不可达则先重启路由。
+  - 每天 02:10 进行节点切换与连通性恢复（切换后不重启服务，直接测 Google）。
+  - SSR Plus 订阅更新改为每天 03:00。
+  - 另保留每周一 04:00 重启与 04:08 检测任务。
+- 用户偏好：相关说明与操作沟通使用中文。
+
+## moomoo OpenAPI 接入进度
+- 用户确认后续将接入 moomoo API，先从模拟盘（SIM）开始。
+- 已在工作区创建接入骨架：
+  - `moomoo_setup/.env.example`
+  - `moomoo_setup/check_opend.py`
+  - `moomoo_setup/README_CN.md`
+- 已安装依赖 `futu-api`、`python-dotenv` 并运行连通测试；当前失败原因为 OpenD 未启动（127.0.0.1:11111 ECONNREFUSED）。
+- 已代下载 Mac 版 OpenD 安装包：
+  - `/Users/lin/.openclaw/workspace/moomoo_setup/downloads/moomoo_OpenD_9.6.5618_Mac.tar.gz`（约374MB）。
