docs: append OpenD install/start status and current API blocker

--- a/memory/2026-02-24.md
+++ b/memory/2026-02-24.md
@@ -190,3 +190,8 @@
 - 已安装依赖 `futu-api`、`python-dotenv` 并运行连通测试；当前失败原因为 OpenD 未启动（127.0.0.1:11111 ECONNREFUSED）。
 - 已代下载 Mac 版 OpenD 安装包：
   - `/Users/lin/.openclaw/workspace/moomoo_setup/downloads/moomoo_OpenD_9.6.5618_Mac.tar.gz`（约374MB）。
+- 已完成 OpenD 本地安装与启动尝试：
+  - 解压路径：`moomoo_setup/opend/moomoo_OpenD_9.6.5618_Mac/`
+  - GUI 安装到：`/Applications/moomoo_OpenD.app`
+  - 进程可启动，但 API 端口仍未监听（连通测试继续报 `127.0.0.1:11111 ECONNREFUSED`）。
+- 关键阻塞点：需用户在 OpenD 图形界面手动完成登录/验证码，并确认 SIM 环境与监听端口配置后，才能继续 API 联通与交易权限校验。
