docs: append model failover, backup, restore script, and calendar reminder notes

--- a/memory/2026-02-25.md
+++ b/memory/2026-02-25.md
@@ -12,3 +12,28 @@
 
 ## 监控播报
 - DeepSeek 余额自动检查结果：`338.88 CNY`，高于 50 CNY 阈值，无需告警。
+
+## 静默自查 (05:00)
+✅ 已完成每日静默自查：
+1. **关键定时任务状态**：07:30/12:30/21:30新闻任务均启用并正常运行
+   - `b62821aa-893f-4544-a59c-807a8cd43ea4` (daily-deep-us-stock-news-0730) - 状态ok，上次执行22小时前
+   - `bde1842e-3f4c-4a1c-9a34-14498f341d25` (midday-us-stock-followup-1230) - 状态ok，上次执行17小时前
+   - `253f5fdf-5b21-4b95-ba3b-1c86f4ed5b8d` (night-us-stock-risk-preview-2130) - 状态ok，上次执行8小时前
+2. **最近24小时执行情况**：所有关键任务正常执行，状态均为ok，无失败记录
+3. **提示词检查**：AGENTS.md、SOUL.md、USER.md、TOOLS.md等关键文件完整，无意外覆盖
+4. **自动修复**：本次未发现问题，无需修复
+
+静默模式：无用户通知，仅内部记录。
+
+## 新增长期操作（00:45-00:53）
+- 已启用低成本模型容灾 cron：`model-failover-lowcost`（id: `6ad8d1c8-571f-4392-bfc5-6b0f03f8ac82`）。
+  - 探测频率：每30分钟
+  - 策略：连续失败2次才切换（更保守）
+  - 平时静默，仅发生切换时通知
+- 已生成全量备份：`/Users/lin/.openclaw/workspace/backups/w0225版.tar.gz`（约847MB）。
+- 已在下载目录放置一键恢复工具与说明：
+  - `/Users/lin/Downloads/restore_w0225_oneclick.sh`
+  - `/Users/lin/Downloads/OpenClaw一键恢复说明-w0225版.txt`
+
+## 日历与提醒
+- 已加入 Google Calendar 事件：`2026-03-20 搬瓦工续费（美国）`（全天，含提前提醒）。
